# dowel-base

./: pyproject.toml  requirements.txt  setup.py
examples/: log_video.py
src/dowel/: __init__.py  csv_output.py  filesystem.py  log_output.py  logger.py  logger_warning.py  simple_outputs.py  tabular_input.py  tensor_board_output.py  torch_tensorboard_output.py  utils.py  video_output.py
tests/dowel/: test_csv_output.py  test_logger.py  test_simple_outputs.py  test_tabular_input.py  test_tensor_board_output.py
